# traxer

./: Cargo.toml  README.md  renovate.json5
.github/workflows/: quality-gate.yml  release-validation.yml
examples/: fields.rs  minimal.rs  try_init.rs
src/: config.rs  error.rs  init.rs  lib.rs
src/formatter/: json.rs  mod.rs  plain.rs
tests/: config_builder.rs  examples_output.rs
